# knot-solver

./: .gitignore  Cargo.toml  readme.md
benches/: region_counter.rs
extra-tools/: knotdraw.py  requirements.txt
knot-solver/: Cargo.toml
knot-solver-cli/: Cargo.toml
knot-solver-cli/src/: main.rs
knot-solver/benches/: resolving.rs
knot-solver/examples/: csv.rs
knot-solver/src/: lib.rs  polynomial.rs
knot-solver/src/polynomial/: mod.rs  new.rs
src/: knotdraw.py  lib.rs  polynomial.rs
