[package]
name = "knot-solver"
version = "0.1.0"
authors = ["Jack Greenberg <theProgrammerJack@gmail.com>"]
edition = "2018"

[dependencies]
bitvec = "0.10.1"
num = "0.2.0"

[dev-dependencies]
criterion = "0.2"
rand = "0.6.5"

[[bench]]
name = "region_counter"
harness = false

[[bench]]
name = "resolving"
harness = false